fix(e-sanar): header from Course Details alignments

--- a/packages/e-sanar/src/Pages/Portal/Course/style.less
+++ b/packages/e-sanar/src/Pages/Portal/Course/style.less
@@ -8,9 +8,14 @@
                 border-bottom: 1px solid rgba(17, 19, 23, 0.15);
                 margin-bottom: @margin-md;
 
+                > div {
+                    flex-flow: row !important;
+                }
+
                 &--name {
                     color: #000 !important;
                     font-size: 24px;
+                    max-width: ~'calc(100% - 28px)';
                 }
 
                 &--category {
